<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorLogin">

    <android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appName"
            android:layout_width="198dp"
            android:layout_height="42dp"
            android:ems="15"
            android:fontFamily="casual"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:textStyle="bold|italic"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <AutoCompleteTextView
            android:id="@+id/tutor_login_email"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/appName"/>

        <AutoCompleteTextView
            android:id="@+id/tutor_login_password"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:layout_below="@id/tutor_login_email"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:onClick="login"
            android:text="@string/button_login"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:layout_below="@id/tutor_login_password"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_marginTop="27dp"
            android:layout_below="@id/login_btn"
            android:layout_centerHorizontal="true"
            android:onClick="forgotPassword"
            android:clickable="true"/>

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="101dp"
            android:text="@string/sign_up_prompt"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:layout_marginTop="54dp"
            android:layout_below="@id/forgot_password"
            android:layout_centerHorizontal="true"
            android:onClick="loginPageSignUp"
            android:clickable="true"/>

    </android.widget.RelativeLayout>
</ScrollView>
