<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TutorSignUp">

    <android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appName"
            android:layout_width="198dp"
            android:layout_height="42dp"
            android:ems="15"
            android:fontFamily="casual"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:layout_marginTop="32dp"
            android:textStyle="bold|italic"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"/>

        <EditText
            android:id="@+id/full_name"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/appName"/>

        <EditText
            android:id="@+id/tutor_signup_email"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/full_name"/>

        <EditText
            android:id="@+id/tutor_signup_password"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:layout_below="@id/tutor_signup_email"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/tutor_signup_password_confirm"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:background="@drawable/textbox_background"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:selectAllOnFocus="true"
            android:layout_below="@id/tutor_signup_password"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="279dp"
            android:layout_height="49dp"
            android:layout_marginTop="54dp"
            android:onClick="signUp"
            android:text="@string/button_sign_up"
            android:background="@drawable/button_background"
            android:textColor="@android:color/white"
            android:layout_below="@id/tutor_signup_password_confirm"
            android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="101dp"
            android:text="@string/login_prompt"
            android:textColor="@color/colorPrimary"
            android:onClick="signUpPageLogIn"
            android:textSize="14sp"
            android:layout_marginTop="18dp"
            android:layout_below="@id/login_btn"
            android:layout_centerHorizontal="true"/>

    </android.widget.RelativeLayout>
</ScrollView>
